# file-encryption-tool

./: .gitignore  AES.cpp  AES.h  AESEncryption.h  CMakeLists.txt  README.md  main.cpp
